--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Pokedex</title>
   </head>
 <body>
-
+    <h1>Pokédex</h1>
+    <table>
+        <tr>
+          <td>col1</td>
+          <td>col2</td>
+          <td>col3</td>
+          <td>col4</td>
+          <td>col5</td>
+          <td>col6</td>
+          <td>col7</td>
+          <td>col8</td>
+          <td>col9</td>
+          <td>col10</td>
+        </tr>
+        <tr>
+          <td>col1</td>
+          <td>col2</td>
+          <td>col3</td>
+          <td>col4</td>
+          <td>col5</td>
+          <td>col6</td>
+          <td>col7</td>
+          <td>col8</td>
+          <td>col9</td>
+          <td>col10</td>
+        </tr>
+      </table>
 </body>
 </html>
