--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 <body>
     <h1>Pokédex</h1>
     <table>
+        <thead>
         <tr>
-          <td>col1</td>
-          <td>col2</td>
-          <td>col3</td>
-          <td>col4</td>
-          <td>col5</td>
-          <td>col6</td>
-          <td>col7</td>
-          <td>col8</td>
-          <td>col9</td>
-          <td>col10</td>
+          <td>Número</td>
+          <td>Nome</td>
+          <td>Tipo</td>
+          <td>Pontos de Vida</td>
+          <td>Ataque</td>
+          <td>Defesa</td>
+          <td>Ataque Especial</td>
+          <td>Defesa Especial</td>
+          <td>Velocidade</td>
+          <td>Total</td>
         </tr>
+        </thead>
         <tr>
           <td>col1</td>
           <td>col2</td>
