--- a/index.html
+++ b/index.html
@@ -23,18 +23,20 @@
           <td>Total</td>
         </tr>
         </thead>
+        <tbody>
         <tr>
-          <td>col1</td>
-          <td>col2</td>
-          <td>col3</td>
-          <td>col4</td>
-          <td>col5</td>
-          <td>col6</td>
-          <td>col7</td>
-          <td>col8</td>
-          <td>col9</td>
-          <td>col10</td>
+          <td>382</td>
+          <td>Kyogre</td>
+          <td>Água</td>
+          <td>100</td>
+          <td>100</td>
+          <td>90</td>
+          <td>150</td>
+          <td>140</td>
+          <td>90</td>
+          <td>670</td>
         </tr>
+        </tbody>
       </table>
 </body>
 </html>
