Cria nova linha e insere informações do 2o pokémon

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
           <td>90</td>
           <td>670</td>
         </tr>
+        <tr>
+            <td>383</td>
+            <td>Groudon</td>
+            <td>Terra</td>
+            <td>100</td>
+            <td>150</td>
+            <td>140</td>
+            <td>100</td>
+            <td>90</td>
+            <td>90</td>
+            <td>670</td>
+          </tr>
         </tbody>
       </table>
 </body>
