Cria nova linha e insere informações do 3o pokémon

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
             <td>90</td>
             <td>670</td>
           </tr>
+        <tr>
+            <td>384</td>
+            <td>Rayquaza</td>
+            <td>Dragão/Voador</td>
+            <td>105</td>
+            <td>150</td>
+            <td>90</td>
+            <td>150</td>
+            <td>90</td>
+            <td>95</td>
+            <td>680</td>
+        </tr>
         </tbody>
       </table>
 </body>
