Cria um rodapé e ajusta células de cabeçalho

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <table>
         <thead>
         <tr>
-          <td>Número</td>
-          <td>Nome</td>
-          <td>Tipo</td>
-          <td>Pontos de Vida</td>
-          <td>Ataque</td>
-          <td>Defesa</td>
-          <td>Ataque Especial</td>
-          <td>Defesa Especial</td>
-          <td>Velocidade</td>
-          <td>Total</td>
+          <th>Número</th>
+          <th>Nome</th>
+          <th>Tipo</th>
+          <th>Pontos de Vida</th>
+          <th>Ataque</th>
+          <th>Defesa</th>
+          <th>Ataque Especial</th>
+          <th>Defesa Especial</th>
+          <th>Velocidade</th>
+          <th>Total</th>
         </tr>
         </thead>
         <tbody>
@@ -60,6 +60,20 @@
             <td>95</td>
             <td>680</td>
         </tr>
+        <tfoot>
+            <tr>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+          </tfoot>
         </tbody>
       </table>
 </body>
