--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
             <td>95</td>
             <td>680</td>
         </tr>
+        </tbody>
         <tfoot>
             <tr>
-              <th></th>
-              <th></th>
-              <th></th>
+              <th colspan="3">Média</th>
               <th></th>
               <th></th>
               <th></th>
@@ -73,8 +72,7 @@
               <th></th>
               <th></th>
             </tr>
-          </tfoot>
-        </tbody>
+        </tfoot>
       </table>
 </body>
 </html>
